--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -85,14 +85,15 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="5dp"
         >
         
         <ImageView 
             android:id="@+id/music_album"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/music"
+            android:layout_marginLeft="15dp"
             />
         
         <LinearLayout 
