--- a/res/layout/music_list_item_layout.xml
+++ b/res/layout/music_list_item_layout.xml
@@ -7,8 +7,8 @@
     
     <ImageView 
         android:id="@+id/albumImage"
-        android:layout_width="wrap_content"
-         android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:src="@drawable/music"
         />
