--- a/res/layout/music_list_item_layout.xml
+++ b/res/layout/music_list_item_layout.xml
@@ -23,7 +23,7 @@
         android:text="@string/time"
         />
     <TextView 
-        android:id="@+id/music_title"
+        android:id="@+id/music_title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/albumImage"
@@ -35,8 +35,8 @@
         android:id="@+id/music_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/music_title"
-        android:layout_alignLeft="@+id/music_title"
+        android:layout_below="@id/music_title1"
+        android:layout_alignLeft="@+id/music_title1"
         android:text="@string/artist"
         />
     
