--- a/res/layout/player_activity.xml
+++ b/res/layout/player_activity.xml
@@ -13,15 +13,7 @@
         android:layout_marginTop="15dp"
         >
         
-        <ImageButton
-            android:id="@+id/repeat_music"
-            android:background="#00000000"
-            android:src="@drawable/repeat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"  
-            
-            />
+ 
         
         <TextView 
             android:id="@+id/musicTitle"
@@ -34,9 +26,7 @@
             android:ellipsize="marquee"
             android:focusable="true"  
             android:focusableInTouchMode="true" 
-            android:layout_alignBaseline="@id/repeat_music"
-            android:textSize="20sp"
-          
+            android:textSize="20sp"         
             />
         
         <TextView 
@@ -51,35 +41,17 @@
             
             />
         
-         <ImageButton 
-             android:id="@+id/shuffle_music"
-             android:background="#00000000"
-             android:src="@drawable/shuffle"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_alignParentRight="true"
-            
-            />
-        
-        
+ 
     </RelativeLayout>
     
-    <ScrollView 
-        android:id="@+id/lrcScrollView"  
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        >
-        
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="好歌不容错过"  
-            android:layout_gravity="center"   
-             android:textSize="20sp"  
-            />
-    </ScrollView>
-    
+   	    
+  	 <android.support.v4.view.ViewPager  
+    android:id="@+id/viewpager"  
+    android:layout_weight="1"
+    android:layout_width="wrap_content"  
+    android:layout_height="0dp"  
+    android:layout_gravity="center" />  
+   	    
   
     <RelativeLayout 
         android:id="@+id/footer_layout"  
@@ -118,11 +90,11 @@
         android:layout_height="wrap_content"      
         >
         <ImageButton 
-            android:id="@+id/search_music"
+            android:id="@+id/shuffle_music"
             android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/search"
+             android:src="@drawable/shuffle"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"       
             
