--- a/res/layout/item_online_search_list.xml
+++ b/res/layout/item_online_search_list.xml
@@ -60,10 +60,12 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:src="@drawable/more"
          />
 
 </RelativeLayout>
