--- a/res/layout/player_activity.xml
+++ b/res/layout/player_activity.xml
@@ -13,7 +13,13 @@
         android:layout_marginTop="15dp"
         >
         
- 
+ 		<ImageView 
+ 		    android:id="@+id/titleBack"
+ 		    android:layout_width="wrap_content"
+ 		    android:layout_height="wrap_content"
+ 		    android:src="@drawable/back"
+ 		    />
+        
         
         <TextView 
             android:id="@+id/musicTitle"
@@ -94,7 +100,7 @@
             android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-             android:src="@drawable/shuffle"
+          	android:src="@drawable/shuffle"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"       
             
